# ray_tracer

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt
include/: camera_handler.hpp  image_handler.hpp  light_sources.hpp  point_light.hpp  ray_handler.hpp  ray_tracer.hpp  scene_handler.hpp  shapes.hpp  sphere.hpp
src/: CMakeLists.txt  camera_handler.cpp  image_handler.cpp  light_sources.cpp  point_light.cpp  ray_handler.cpp  ray_tracer.cpp  ray_tracer_demo.cpp  scene_handler.cpp  shapes.cpp  sphere.cpp
